--- a/css/style.css
+++ b/css/style.css
@@ -50,5 +50,16 @@ table{
 
     margin-left: auto;
     margin-right: auto;
+    border-collapse: collapse ;
 }
 
+td,th {
+
+border: 2px solid black;
+padding-left: 20px;
+padding-right: 20px;
+padding-top: 10px;
+padding-bottom: 10px;
+
+
+}
