--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@ table{
     border-collapse: collapse ;
 }
 
+th{
+background-color: black;
+color: white;
+}
+
+
 td,th {
 
 border: 2px solid black;
