--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ padding-bottom: 10px;
 }
 
 #seccio1 {
-    
+    background-image: url(https://thumbs.dreamstime.com/b/paisaje-con-las-monta%C3%B1as-fondo-de-la-naturaleza-colinas-de-con%C3%ADfero-75770452.jpg);
     height: 100vh;
     background-color: #cccccc;
     background-attachment: fixed;
