--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,41 @@ padding-left: 20px;
 padding-right: 20px;
 padding-top: 10px;
 padding-bottom: 10px;
+}
 
+nav {
+
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+padding-top: 20px;
+padding-left: 5%;
+padding-right: 5%;
+font-weight:  bold;
+}
+
+h1{
+color: white;
+font-size: 45px;
+}
+
+ul li{
+display: inline-block;
+padding: 0px 20px;
+}
+
+a {
+color: white;
+text-decoration: none;
 
 }
+
+a:hover{
+
+    color: aqua;
+}
+
 #background {
     background-image: url("https://www.fcbarcelona.com/fcbarcelona/photo/2022/08/02/ae5252d1-b79b-4950-9e34-6e67fac09bb0/LeoMessi20092010_pic_fcb-arsenal62.jpg");
     background-size: cover;
