--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ font-weight:  bold;
 }
 
 h1{
-color: white;
+color: rgb(0, 0, 0);
 font-size: 45px;
 }
 
@@ -59,7 +59,7 @@ padding: 0px 20px;
 }
 
 a {
-color: white;
+color: rgb(0, 0, 0);
 text-decoration: none;
 
 }
