--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ a:hover{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: rgb(8, 252, 0);
     font-size: 3rem;
     font-weight: bold;
     text-align: center;
